--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -26,6 +26,10 @@ openshift:
   # -- enables using arbitrary uid for argo repo server
   enabled: false
 
+applicationVersioning:
+  # -- enables the Codefresh application versioning feature
+  enabled: true
+
 ## Custom resource configuration
 crds:
   # -- Install and upgrade CRDs
@@ -2160,11 +2164,6 @@ repoServer:
 
   # -- Environment variables to pass to repo server
   env: []
-
-  # Applications versions configuration settings
-  versionConfiguration:
-    # Disable getting version configuration from the Codefresh API
-    disabled: false
 
   # -- envFrom to pass to repo server
   # @default -- `[]` (See [values.yaml])
