--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -29,6 +29,8 @@ openshift:
 applicationVersioning:
   # -- enables the Codefresh application versioning feature
   enabled: true
+  # -- use ApplicationConfiguration CRD to manage application versioning
+  useApplicationConfiguration: true
 
 ## Custom resource configuration
 crds:
