--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -27,4 +27,4 @@ annotations:
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
     - kind: changed
-      description: Upgrade Argo CD to v2.9-2024.2.14-58059e8b0. Getting application version configuration from the Codefresh API
+      description: Upgrade Argo CD to v2.9-2024.2.15-d04e12c26. Getting application version configuration from the Codefresh API.
