feat(argo-workflows): add caSecret in s3 configuration (#2519)
* add caSecret

Signed-off-by: Dondon Alexis <Y3GDTU@ad.insee.intra>

* bump chart version

Signed-off-by: Dondon Alexis <Y3GDTU@ad.insee.intra>

* add changelog

Signed-off-by: Dondon Alexis <Y3GDTU@ad.insee.intra>

---------

Signed-off-by: Dondon Alexis <Y3GDTU@ad.insee.intra>
Co-authored-by: Dondon Alexis <Y3GDTU@ad.insee.intra>
Co-authored-by: Vlad Losev <vladlosev@users.noreply.github.com>

--- a/charts/argo-workflows/Chart.yaml
+++ b/charts/argo-workflows/Chart.yaml
@@ -3,7 +3,7 @@ appVersion: v3.5.4
 name: argo-workflows
 description: A Helm chart for Argo Workflows
 type: application
-version: 0.40.10
+version: 0.40.11
 icon: https://argo-workflows.readthedocs.io/en/stable/assets/logo.png
 home: https://github.com/argoproj/argo-helm
 sources:
@@ -17,4 +17,4 @@ annotations:
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
     - kind: fixed
-      description: Update argo-workflows documentation links to readthedocs
+      description: Add caSecret in the artifactory.s3 configuration values.
