chore: add aritfacthub description
Signed-off-by: fulcrum29 <35672150+fulcrum29@users.noreply.github.com>

--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -27,4 +27,4 @@ annotations:
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
     - kind: fixed
-      description: Add missing `global.domain` default values
+      description: AWS gRPC Ingress rule ordering
