fix(chart): add artifacthub annotations
Signed-off-by: irizzant <i.rizzante@gmail.com>

--- a/charts/argocd-apps/Chart.yaml
+++ b/charts/argocd-apps/Chart.yaml
@@ -17,5 +17,12 @@ annotations:
     fingerprint: 2B8F22F57260EFA67BE1C5824B11F800CD9D2252
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
+    - kind: added
+      description: make the chart use maps instead of lists
+      links:
+        - name: GitHub Issue
+          url: https://github.com/argoproj/argo-helm/issues/2523
+        - name: GitHub PR
+          url: https://github.com/argoproj/argo-helm/pull/2538
     - kind: fixed
       description: move ignoreApplicationDifferences block up a level to fix render
