Changing additionalRules from dict to list and addressing comment
Signed-off-by: Alvaro.Camina <alvaro.camina@alteryx.com>

--- a/charts/argo-rollouts/templates/controller/clusterrole.yaml
+++ b/charts/argo-rollouts/templates/controller/clusterrole.yaml
@@ -276,8 +276,8 @@ rules:
   verbs:
   - '*'
 {{- end }}
-{{- if .Values.providerRBAC.additionalRules }}
-{{ toYaml .Values.providerRBAC.additionalRules }}
+{{- with .Values.providerRBAC.additionalRules }}
+{{ toYaml .  }}
 {{- end }}
 {{- end }}
 {{- end }}
