Changing additionalRules from dict to list
Signed-off-by: Alvaro.Camina <alvaro.camina@alteryx.com>

--- a/charts/argo-rollouts/values.yaml
+++ b/charts/argo-rollouts/values.yaml
@@ -274,7 +274,7 @@ providerRBAC:
     # -- Adds RBAC rules for the Gloo Platform provider, see `https://github.com/argoproj-labs/rollouts-plugin-trafficrouter-glooplatform/blob/main/README.md`
     glooPlatform: true
   # -- Additional RBAC rules for others providers
-  additionalRules: {}
+  additionalRules: []
 
 dashboard:
   # -- Deploy dashboard server
