added ability to set .Values.namespace override
Signed-off-by: Braden Wright <braden.wright@waltlabs.io>

--- a/charts/argocd-image-updater/values.yaml
+++ b/charts/argocd-image-updater/values.yaml
@@ -17,6 +17,8 @@ imagePullSecrets: []
 nameOverride: ""
 # -- Global fullname (argocd-image-updater.fullname in _helpers.tpl) override
 fullnameOverride: ""
+# -- Global namespace (argocd-image-updater.namespace in _helpers.tpl) override
+namespaceOverride: ""
 
 # -- Extra arguments for argocd-image-updater not defined in `config.argocd`.
 # If a flag contains both key and value, they need to be split to a new entry
