feat(argo-workflows): Support namespaceOverride Signed-off-by: yu-croco <yu.croco@gmail.com>

--- a/charts/argo-workflows/values.yaml
+++ b/charts/argo-workflows/values.yaml
@@ -26,6 +26,10 @@ nameOverride:
 # -- String to fully override "argo-workflows.fullname" template
 fullnameOverride:
 
+# -- Override the namespace
+# @default -- `.Release.Namespace`
+namespaceOverride: ""
+
 # -- Labels to set on all resources
 commonLabels: {}
 
