chore(github): Disable some GH actions on forks
Signed-off-by: Tim Collins <tim@thecollins.team>

--- a/.github/workflows/renovate.yaml
+++ b/.github/workflows/renovate.yaml
@@ -12,6 +12,7 @@ permissions:
 
 jobs:
   renovate:
+    if: github.repository == 'argoproj/argo-helm'
     runs-on: ubuntu-latest
     steps:
       - name: Get token
