chore(github): Update renovate image only monthly
Signed-off-by: Marco Maurer <mkilchhofer@users.noreply.github.com>

--- a/renovate.json
+++ b/renovate.json
@@ -98,6 +98,10 @@
     {
       "matchPackagePatterns": ["redis-ha"],
       "enabled": false
+    },
+    {
+      "matchPackageNames": ["ghcr.io/renovatebot/renovate"],
+      "extends": ["schedule:monthly"]
     }
   ]
 }
