test renovate github things
Signed-off-by: Tim Collins <tim@thecollins.team>

--- a/renovate.json
+++ b/renovate.json
@@ -14,7 +14,8 @@
     "**/charts/argo-events/Chart.yaml",
     "**/charts/argo-rollouts/Chart.yaml",
     "**/charts/argocd-image-updater/Chart.yaml",
-    "**/.github/workflows/renovate.yaml"
+    "**/.github/workflows/renovate.yaml",
+    "**/.github/workflows"
   ],
   "customManagers": [
     {
