feat(argo-cd): Support for existing Secret in ArgoCD Notifications, and ability to set its name.
Signed-off-by: ranrubin <ranrubin@gmail.com>

--- a/charts/argo-cd/templates/argocd-notifications/clusterrole.yaml
+++ b/charts/argo-cd/templates/argocd-notifications/clusterrole.yaml
@@ -38,11 +38,11 @@ rules:
     verbs:
     - get
   {{- end }}
-  {{- if .Values.notifications.secret.create }}
+  {{- if or .Values.notifications.secret.create .Values.notifications.secret.useExistingSecret }}
   - apiGroups:
     - ""
     resourceNames:
-    - argocd-notifications-secret
+    - {{ .Values.notifications.secret.name }}
     resources:
     - secrets
     verbs:
