--- a/charts/argo-cd/templates/argocd-configs/argocd-notifications-secret.yaml
+++ b/charts/argo-cd/templates/argocd-configs/argocd-notifications-secret.yaml
@@ -1,8 +1,8 @@
-{{- if and .Values.notifications.enabled .Values.notifications.secret.create }}
+{{- if and (not .Values.notifications.secret.useExistingSecret) .Values.notifications.enabled .Values.notifications.secret.create }}
 apiVersion: v1
 kind: Secret
 metadata:
-  name: argocd-notifications-secret
+  name: {{ .Values.notifications.secret.name }}
   namespace: {{ .Release.Namespace | quote }}
   labels:
     {{- include "argo-cd.labels" (dict "context" . "component" .Values.notifications.name "name" .Values.notifications.name) | nindent 4 }}
