fix: use the right range function
Signed-off-by: irizzant <i.rizzante@gmail.com>

--- a/charts/argocd-apps/templates/applicationsets.yaml
+++ b/charts/argocd-apps/templates/applicationsets.yaml
@@ -1,5 +1,5 @@
 
-{{- range $k, $v := .Values.applicationsets }}
+{{- range $k, _:= .Values.applicationsets }}
 ---
 apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
