--- a/charts/argocd-apps/templates/applications.yaml
+++ b/charts/argocd-apps/templates/applications.yaml
@@ -1,4 +1,4 @@
-{{- range $k, $v := .Values.applications }}
+{{- range $k, _:= .Values.applications }}
 ---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
