--- a/charts/argocd-apps/templates/item-templates.yaml
+++ b/charts/argocd-apps/templates/item-templates.yaml
@@ -1,4 +1,4 @@
-{{- range $k, $v := .Values.itemTemplates }}
+{{- range $k, _:= .Values.itemTemplates }}
 {{- if kindIs "string" .template }}
 {{- $template := .template -}}
 {{- range .items }}
