fix(argocd-apps): fix issues
Signed-off-by: irizzant <i.rizzante@gmail.com>

--- a/charts/argocd-apps/templates/applications.yaml
+++ b/charts/argocd-apps/templates/applications.yaml
@@ -1,4 +1,4 @@
-{{- range $k, _:= .Values.applications }}
+{{- range $k, $v:= .Values.applications }}
 ---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
