--- a/charts/argo-cd/templates/argocd-configs/argocd-notifications-secret.yaml
+++ b/charts/argo-cd/templates/argocd-configs/argocd-notifications-secret.yaml
@@ -1,4 +1,4 @@
-{{- if and (not .Values.notifications.secret.useExistingSecret) .Values.notifications.enabled .Values.notifications.secret.create }}
+{{- if and .Values.notifications.enabled .Values.notifications.secret.create }}
 apiVersion: v1
 kind: Secret
 metadata:
