feat(argo-cd): Support setting ArgoCD Notifications secret (#2577)
* chore(deps): update renovatebot/github-action action to v40.1.3 (#2573)

Co-authored-by: renovate[bot] <renovate[bot]@users.noreply.github.com>
Signed-off-by: ranrubin <ranrubin@gmail.com>

* feat(argo-cd): Support for existing Secret in ArgoCD Notifications, and ability to set its name.

Signed-off-by: ranrubin <ranrubin@gmail.com>

* feat(argo-cd): Pass Secret name to Notification controller

Signed-off-by: ranrubin <ranrubin@gmail.com>

* chore(deps): update renovatebot/github-action action to v40.1.4 (#2579)

Co-authored-by: renovate[bot] <renovate[bot]@users.noreply.github.com>
Signed-off-by: ranrubin <ranrubin@gmail.com>

* feat(argo-cd): Remove redundant useExistingSecret, and assume existence of a secret

Signed-off-by: ranrubin <ranrubin@gmail.com>

---------

Signed-off-by: ranrubin <ranrubin@gmail.com>
Co-authored-by: argoproj-renovate[bot] <161757507+argoproj-renovate[bot]@users.noreply.github.com>
Co-authored-by: renovate[bot] <renovate[bot]@users.noreply.github.com>

--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -3017,7 +3017,11 @@ notifications:
 
   secret:
     # -- Whether helm chart creates notifications controller secret
+    ## If true, will create a secret with the name below. Otherwise, will assume existence of a secret with that name.
     create: true
+
+    # -- notifications controller Secret name
+    name: "argocd-notifications-secret"
 
     # -- key:value pairs of annotations to be added to the secret
     annotations: {}
